[package]
name = "rustldapconecter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["http2"] }
axum-server = "0.7.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.220", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4.41"
async-trait = "0.1.89"
ldap3 = "0.11.5"